core/dozzle/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dozzle-httproute
  namespace: default
  annotations:
    glance.pmcd.io/monitor: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: default
  hostnames:
    - logs.x.pmcd.io
    - dozzle.x.pmcd.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dozzle-service
          kind: Service
          namespace: default
          port: 8080
